<resources>
    <string name="app_name">Parsetagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">logo</string>
    <string name="post_image">Post Image</string>
    <string name="caption">Caption</string>
    <string name="submit">Submit</string>
    <string name="take_picture">Take Picture</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>