<?xml version="1.0" encoding="utf-8"?>

<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:fillViewport="true"-->
<!--    tools:context=".LoginActivity">-->

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content" >-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/etUsername"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/etPassword"-->
<!--            app:layout_constraintVertical_chainStyle="packed" >-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/loginInput"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/username" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/etPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/etUsername"-->
<!--            app:layout_constraintBottom_toTopOf="@id/btnLogin">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/passwordInput"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/password" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnLogin"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/login"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/etPassword"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/btnSignup" />-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnSignup"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginEnd="32dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:text="@string/signup"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/btnLogin"-->
<!--            app:layout_constraintBottom_toBottomOf="parent" />-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--</ScrollView>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="16dp"
android:orientation="vertical"
tools:context=".LoginActivity">

<EditText
    android:id="@+id/etUsername"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:ems="10"
    android:hint="@string/username" />

<EditText
    android:id="@+id/etPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textPassword"/>

<Button
    android:id="@+id/btnLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/login" />

<Button
    android:id="@+id/btnSignup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/signup" />
</LinearLayout>